[package]
name = "ChopSampler"
version = "1.0.0"
edition = "2021"
authors = ["MLo7"]
description = "A TD-PSOLA-based UTAU resampler that is chopped 🥀"

[dependencies]
hound = "3.5"
rayon = "1.8"
regex = "1.10"
rand = "0.8"
rand_distr = "0.4"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
praatfan-core-rs = { git = "https://github.com/ucpresearch/praatfan-core-rs" }

[build-dependencies]
winres = "0.1"